    an empty tuple as well as an empty dict.
    [ticket:2339].  Thanks to Fayaz Yusuf Khan
    for the patch.

  - [bug] Updated warning message when setting
    delete-orphan without delete to no longer
    refer to 0.6, as we never got around to 
    upgrading this to an exception.  Ideally
    this might be better as an exception but
    it's not critical either way.  [ticket:2325]

- sql
   - [bug] related to [ticket:2316], made some 
     adjustments to the change from [ticket:2261]
     regarding the "from" list on a select(). The
     _froms collection is no longer memoized, as this
     simplifies various use cases and removes the 
     need for a "warning" if a column is attached
     to a table after it was already used in an 
     expression - the select() construct will now
     always produce the correct expression.  
     There's probably no real-world
     performance hit here; select() objects are 
     almost always made ad-hoc, and systems that 
     wish to optimize the re-use of a select()
     would be using the "compiled_cache" feature.
     A hit which would occur when calling select.bind
     has been reduced, but the vast majority
     of users shouldn't be using "bound metadata"
     anyway :).

   - [feature] The update() construct can now accommodate
     multiple tables in the WHERE clause, which will
     render an "UPDATE..FROM" construct, recognized by 
     Postgresql and MSSQL.  When compiled on MySQL,
     will instead generate "UPDATE t1, t2, ..".  MySQL
     additionally can render against multiple tables in the
     SET clause, if Column objects are used as keys
     in the "values" parameter or generative method.
     [ticket:2166] [ticket:1944]

   - [feature] Added accessor to types called "python_type",
     returns the rudimentary Python type object
     for a particular TypeEngine instance, if known,
     else raises NotImplementedError.  [ticket:77]

   - [bug] further tweak to the fix from [ticket:2261],